# syncsmith

./: .gitignore  CMakeLists.txt  README.md
doc/: syncsmith_uimockup.odg
lib/: ISyncSmithServer.h  SyncContext.h  SyncSmith.cpp  SyncSmith.h
src/: FloatTrack.cpp  FloatTrack.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  SyncContext.cpp  SyncContext.h  SyncServer.cpp  SyncServer.h  SyncSmithDevelopmentClient.cpp  SyncSmithDevelopmentClient.h  TimelineWidget.cpp  TimelineWidget.h  Track.h  TrackHeaderItemDelegate.cpp  TrackHeaderListView.cpp  TrackHeaderListView.h  TrackItemDelegate.cpp  TrackItemDelegate.h  TrackListModel.cpp  TrackListModel.h  TrackListView.cpp  TrackListView.h
src/core/: FloatTrack.cpp  FloatTrack.h  SyncClient.cpp  SyncClient.h  SyncContext.cpp  SyncContext.h  SyncPacket.h  SyncServer.cpp  SyncServer.h  SyncTrack.c  SyncTrack.h  SyncTrackKey.h  TerminalSyncClient.cpp  TerminalSyncClient.h  Track.h  TrackInterpolationType.h  TrackKey.h  TrackType.h
src/ui/: AddTrackDialog.cpp  AddTrackDialog.h  AddTrackDialog.ui  FloatTrackEditor.cpp  FloatTrackEditor.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  TimelineWidget.cpp  TimelineWidget.h  TrackHandle.h  TrackHeaderItemDelegate.cpp  TrackHeaderItemDelegate.h  TrackHeaderListView.cpp  TrackHeaderListView.h  TrackItemDelegate.cpp  TrackItemDelegate.h  TrackListModel.cpp  TrackListModel.h  TrackListView.cpp  TrackListView.h  TrackUtils.cpp  TrackUtils.h  UIConstants.h
